otros metodos de ordenacion

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /EDE04EJ06/nbproject/private/
 /Sort01/nbproject/private/
 /Sort01/build/
+/Burbuja/nbproject/private/
+/Seleccion/nbproject/private/
