metodo de burbuja - ordenacion

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 /Sort01/build/
 /Burbuja/nbproject/private/
 /Seleccion/nbproject/private/
+/Seleccion/build/
+/SortObjetos/nbproject/private/
+/SortObjetos/build/
+/Burbuja/build/
