--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@
 /Burbuja/build/
 /Profesores/nbproject/private/
 /Profesores/build/
+/DivisionExcepciones/nbproject/private/
+/DivisionExcepciones/build/
+/DivisionExcepcionAmpliada/nbproject/private/
+/DivisionExcepcionAmpliada/build/
