--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@
 /DivisionExcepciones/build/
 /DivisionExcepcionAmpliada/nbproject/private/
 /DivisionExcepcionAmpliada/build/
+/ValidacionDNI/nbproject/private/
+/ValidacionDNI/build/
+/validadDNI02/nbproject/private/
+/validadDNI02/build/
+/Profesor02/nbproject/private/
+/Profesor02/build/
