--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 /ValidarIBAN/nbproject/private/
+/Udemy/Conversion/nbproject/private/
+/Udemy/Conversion/build/
+/Udemy/Ejercicio01/nbproject/private/
+/Udemy/Ejercicio01/build/
+/Udemy/OperadoresAritmeticos/nbproject/private/
+/Udemy/OperadoresAritmeticos/build/
+/Udemy/Rectangulo/nbproject/private/
+/Udemy/Rectangulo/build/
