--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@
 /Udemy/OperadoresAritmeticos/build/
 /Udemy/Rectangulo/nbproject/private/
 /Udemy/Rectangulo/build/
+/Udemy/OperadoresAsignacion/nbproject/private/
+/Udemy/Arreglos01/nbproject/private/
+/Udemy/Arreglos01/build/
+/Udemy/ArreglosPersonas/nbproject/private/
+/Udemy/ArreglosPersonas/build/
