--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 /Udemy/Arreglos01/build/
 /Udemy/ArreglosPersonas/nbproject/private/
 /Udemy/ArreglosPersonas/build/
+/ProfesorArrayList/nbproject/private/
+/ProfesorArrayList/build/
