--- a/Profesores/nbproject/private/private.properties
+++ b/Profesores/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/alejandro/snap/netbeans/common/data/12.2/build.properties
+user.properties.file=C:\\Users\\MSI\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
