ejercicios de herencias

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /Udemy/OperadoresRelacionales/nbproject/private/
 /Udemy/OperadoresRelacionales/build/
+/Herencia01/build/
+/Herencia02/nbproject/private/
